# wasmvm

./: .gitignore  CHANGELOG-LINK.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Makefile  NOTICE  README.md  build_demo.sh  go.mod  go.sum  ibc_test.go  lib.go  lib_no_cgo.go  lib_no_cgo_test.go  lib_test.go  version_cgo.go
.chglog/: CHANGELOG.tpl.md  config.yml
.github/: PULL_REQUEST_TEMPLATE.md  semantic.yml
.github/workflows/: builds_and_tests.yml  deploy_to_git.yml  release.yml  tests.yml
api/: api_test.go  bindings.h  callbacks.go  callbacks_cgo.go  iterator.go  iterator_test.go  lib.go  lib_test.go  libwasmvm.dylib  link_glibclinux_aarch64.go  link_glibclinux_x86_64.go  link_mac.go  link_muslc.go  link_static.go  link_std.go  memory_test.go  mocks.go
api/testdata/: README.md  call_number.wasm  download_releases.sh  events.wasm  intermediate_number.wasm  number.wasm
builders/: Dockerfile.alpine  Dockerfile.centos7  Dockerfile.cross  Dockerfile.static  Makefile  README.md
builders/guest/: build_linux.sh  build_linux_static.sh  build_macos.sh  build_muslc.sh
cmd/: main.go
cmd/demo/: main.go
devtools/: check_shellscript_lint.sh  set_version.sh
internal/api/: api_test.go  bindings.h  callbacks.go  callbacks_cgo.go  checksums.txt  iterator.go  iterator_test.go  lib.go  lib_test.go  libwasmvm.dylib  link_glibclinux_aarch64.go  link_glibclinux_x86_64.go  link_mac.go  link_muslc.go  mock_failure.go  mocks.go  version_test.go
internal/api/testdb/: types.go
libwasmvm/: Cargo.toml  api  bindings.h
libwasmvm/src/: api.rs  cache.rs  calls.rs  dynamic_link.rs  lib.rs  version.rs
libwasmvm/src/error/: rust.rs
src/: api.rs
testdata/: README.md  download_releases.sh  intermediate_number.wasm  number.wasm
types/: ibc.go  msg.go  queries.go
