[package]
name = "wasmvm"
version = "1.1.1-0.12.0"
publish = false
authors = ["Finschia Foundation"]
edition = "2021"
description = "Go bindings for cosmwasm contracts"
repository = "https://github.com/Finschia/wasmvm"
license = "Apache-2.0"
readme = "README.md"
exclude = [".circleci/*", ".gitignore"]

[lib]
crate-type = ["cdylib", "rlib"]

# the example is to allow us to compile a muslc static lib with the same codebase as we compile the
# normal dynamic libs (best workaround I could find to override crate-type on the command line)
[[example]]
name = "muslc"
path = "src/lib.rs"
crate-type = ["staticlib"]

[[example]]
name = "wasmvmstatic"
path = "src/examples/wasmvmstatic.rs"
crate-type = ["staticlib"]

[features]
default = []
# This feature requires Rust nightly because it depends on the unstable backtrace feature.
backtraces = []

[dependencies]
cosmwasm-std = { git = "https://github.com/Finschia/cosmwasm", tag = "v1.1.9+0.9.0", features = ["iterator","staking","stargate"]}
cosmwasm-vm = { git = "https://github.com/Finschia/cosmwasm", tag = "v1.1.9+0.9.0", features = ["iterator","staking","stargate"]}
errno = "0.2"
serde_json = "1.0"
thiserror = "1.0"
hex = "0.4"

[dev-dependencies]
serde = { version = "1.0.103", default-features = false, features = ["derive"] }
tempfile = "3.1.0"

[build-dependencies]
cbindgen = "0.24.3"

[profile.release]
opt-level = 3
debug = false
rpath = true
lto = false
debug-assertions = false
codegen-units = 16
panic = 'unwind'
incremental = true
overflow-checks = true
